--- a/public/index.html
+++ b/public/index.html
@@ -1,48 +1,45 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TypeScript Tutorial</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TypeScript Tutorial</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <h1>Finance Logger</h1>
 
-  <div class="wrapper">
-    <h1>Finance Logger</h1>
+      <!-- output list -->
+      <ul class="item-list"></ul>
+    </div>
 
-    <!-- output list -->
-    <ul class="item-list">
-      
-    </ul>
-  </div>
+    <footer>
+      <form class="new-item-form">
+        <div class="field">
+          <label
+            >Type:
+            <select id="type">
+              <option value="invoice">Invoice</option>
+              <option value="payment">Payment</option>
+            </select></label
+          >
+        </div>
+        <div class="field">
+          <label>To / From: <input type="text" id="tofrom" /></label>
+        </div>
+        <div class="field">
+          <label>Details: <input type="text" id="details" /></label>
+        </div>
+        <div class="field">
+          <label>Amount (£): <input type="number" id="amount" /></label>
+        </div>
+        <button>Add</button>
+      </form>
 
-  <footer>
-    <form class="new-item-form">
-      <div class="field">
-        <label>Type:</label>
-        <select id="type">
-          <option value="invoice">Invoice</option>
-          <option value="payment">Payment</option>
-        </select>
-      </div>
-      <div class="field">
-        <label>To / From:</label>
-        <input type="text" id="tofrom">
-      </div>   
-      <div class="field">
-        <label>Details:</label>
-        <input type="text" id="details">
-      </div>
-      <div class="field">
-        <label>Amount (£):</label>
-        <input type="number" id="amount">
-      </div>
-      <button>Add</button>
-    </form>
+      <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
+    </footer>
 
-    <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
-  </footer>
-
-  <script type="module" src='app.js'></script>
-</body>
+    <script type="module" src="app.js"></script>
+  </body>
 </html>
